--- a/Esercitazione 1 - Calcolatrice/app/src/main/res/values/colors.xml
+++ b/Esercitazione 1 - Calcolatrice/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#8B0000</color>
     <color name="white">#ffff</color>
+    <color name= "azure">#00BCD4</color>
+    <color name= "green">#82E690</color>
+    <color name= "black">#000000</color>
+    <color name= "blues">#4B73C5</color>
 </resources>
